--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "port": 4096,
   "address": "0.0.0.0",
-  "publicIp": "",
+  "publicIp": "192.168.31.99",
   "logLevel": "debug",
   "magic": "594fe0f3",
   "api": {
