增加链内转账

--- a/config.json
+++ b/config.json
@@ -20,6 +20,22 @@
     "secret": "wine art left hour recall act head illness renew hole exile spike",
     "validate": "serc.io"
   },
+  "matrix": {
+    "secret": "mirror ozone limb junk assume solution relief trust armed priority market seat",
+    "validate": "serc.io"
+  },
+  "WASHI": {
+    "secret": "sure rent typical amused comfort robot snap iron beach bus spirit glove",
+    "validate": "serc.io"
+  },
+  "ACHAIN": {
+    "secret": "sure rent typical amused comfort robot snap iron beach bus spirit glove",
+    "validate": "serc.io"
+  },
+  "ETHEERUM": {
+    "secret": "mirror ozone limb junk assume solution relief trust armed priority market seat",
+    "validate": "serc.io"
+  },
   "forging": {
     "secret": [
       "fragile drill merit estate panel cover amount reform latin person paddle quick",
