--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
     "async": "1.5.2",
     "bignumber": "https://github.com/AschPlatform/bignumber/tarball/master",
     "bitcore-mnemonic": "^1.2.5",
-    "body-parser": "1.15.2",
+    "body-parser": "^1.18.3",
     "bytebuffer": "5.0.1",
     "change-case": "3.0.0",
     "colors": "1.1.2",
     "commander": "2.6.0",
-    "compression": "1.6.1",
+    "compression": "^1.7.2",
     "cors": "2.7.1",
     "daemon": "1.1.0",
     "decompress-zip": "https://github.com/AschPlatform/decompress-zip/tarball/master",
     "ejs": "2.5.7",
-    "express": "4.14.0",
+    "express": "^4.16.3",
     "express-domain-middleware": "0.1.0",
     "extend": "2.0.0",
     "ip": "1.1.3",
@@ -32,12 +32,12 @@
     "json-sql": "https://github.com/AschPlatform/json-sql/tarball/master",
     "lodash": "^3.9.3",
     "mathjs": "^3.17.0",
-    "method-override": "2.3.6",
-    "node-gyp": "^3.6.2",
-    "npm": "^6.0.0",
+    "method-override": "^2.3.10",
+    "node-gyp": "^3.7.0",
+    "npm": "^6.1.0",
     "protocol-buffers": "^3.2.1",
     "randomstring": "1.1.5",
-    "request": "2.74.0",
+    "request": "^2.87.0",
     "rimraf": "2.5.4",
     "serc-js": "git+https://github.com/WashiPlatform/serc-js.git",
     "shelljs": "^0.7.8",
@@ -51,14 +51,14 @@
     "z-schema": "https://github.com/AschPlatform/z-schema/tarball/master"
   },
   "devDependencies": {
-    "babel": "=5.8.23",
+    "babel": "^5.8.38",
     "chai": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-replace": "^0.5.4",
     "gulp-shell": "^0.5.2",
     "mocha": "^2.2.5",
     "mocha-babel": "^3.0.3",
-    "moment": "^2.22.1",
+    "moment": "^2.22.2",
     "should": "~4.6.0",
     "supertest": "^1.0.1",
     "webpack-node-externals": "^1.7.2",
